--- a/src/AppBundle/Resources/views/cv/showcv.html.twig
+++ b/src/AppBundle/Resources/views/cv/showcv.html.twig
@@ -5,7 +5,7 @@
 {% block body %}
     <div>
         <h1>Etudiant en Informatique</h1>, <br/>
-        curieu et organisé
+        curieux et organisé
     </div>
     <div class="myinfo">
         <div>
