--- a/src/AppBundle/Resources/views/layout.html.twig
+++ b/src/AppBundle/Resources/views/layout.html.twig
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <link href="{{ asset('assets/css/bootstrap.min.css') }}" rel="stylesheet" media="screen, projection"/>
     <link href="{{ asset('assets/css/style.css') }}" rel="stylesheet"/>
-    <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}" />
+    <link rel="icon" type="image/x-icon" href="{{ asset('assets/img/logo.png') }}" />
     {% endblock %}
     <title>{% block title %}Clément CARDARELLI{% endblock %}</title>
 </head>
