--- a/src/Clement/BlogBundle/Resources/views/Admin/standard_layout.html.twig
+++ b/src/Clement/BlogBundle/Resources/views/Admin/standard_layout.html.twig
@@ -25,6 +25,7 @@ file that was distributed with this source code.
 <!DOCTYPE html>
 <html {% block html_attributes %}class="no-js"{% endblock %}>
     <head>
+        <link rel="icon" type="image/x-icon" href="{{ asset('assets/img/logo.png') }}" />
         {% block meta_tags %}
             <meta http-equiv="X-UA-Compatible" content="IE=edge">
             <meta charset="UTF-8">
