--- a/web/assets/css/style.css
+++ b/web/assets/css/style.css
@@ -12,67 +12,12 @@
 }
 
 .mypic{
-    width: 100%;
+    max-width: 300px;
 }
 .bigbr{
     margin-bottom: 15px;
 }
 
-progress{
-    margin-left: 40px;
-    display: inline-block;
-    -moz-box-sizing: border-box;
-    box-sizing: border-box;
-    width: 300px;
-    height: 15px;
-    padding: 3px 3px 2px 3px;
-    background: #333;
-    background: -webkit-linear-gradient(#2d2d2d,#444);
-    background:    -moz-linear-gradient(#2d2d2d,#444);
-    background:      -o-linear-gradient(#2d2d2d,#444);
-    background:         linear-gradient(#2d2d2d,#444);
-    border: 1px solid rgba(0,0,0,.5);
-    border-radius: 15px;
-    box-shadow: 0 1px 0 rgba(255,255,255,.2);
-}
-
-progress::-moz-progress-bar{
-    border-radius:10px;
-    background: #09c;
-    background:
-            -moz-repeating-linear-gradient(
-                    45deg,
-                    rgba(255,255,255,.2) 0,
-                    rgba(255,255,255,.2) 10px,
-                    rgba(255,255,255,0) 10px,
-                    rgba(255,255,255,0) 20px
-            ),
-            -moz-linear-gradient(
-                    rgba(255,255,255,.1) 50%,
-                    rgba(255,255,255,0) 60%
-            ),
-            #09c;
-    background:
-            repeating-linear-gradient(
-                    45deg,
-                    rgba(255,255,255,.2) 0,
-                    rgba(255,255,255,.2) 10px,
-                    rgba(255,255,255,0) 10px,
-                    rgba(255,255,255,0) 20px
-            ),
-            linear-gradient(
-                    rgba(255,255,255,.1) 50%,
-                    rgba(255,255,255,0) 60%
-            ),
-            #09c;
-    background-size: 300px 20px, auto, auto;
-    background-position: -300px 0, top, top;
-    background-position: top right, top, top;
-    box-shadow: 0 1px 0 rgba(255,255,255,.5) inset,
-    0 -1px 0 rgba(0,0,0,.8) inset,
-    0 0 2px black;
-
-}
 
 .titrearticle{
 
@@ -96,6 +41,19 @@ progress::-moz-progress-bar{
     margin-bottom: 25px;
 }
 
-.glob{
-
+.onLeft{
+    float: left;
+    width: 33%;
+}
+.onRight{
+    float: right;
+    width: 67%;
+}
+.ltlpic{
+    max-height: 100px;
+}
+.mycontainer{
+    width: 100%;
+    margin-bottom: 25px;
+    margin-top: 25px;
 }
